modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-capabilities/rendered/test_samples/pods/002-013-allowed-net-bind-service.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: allowed-net-bind-service
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            capabilities:
                add:
                    - NET_BIND_SERVICE
                drop:
                    - ALL
