modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-capabilities/rendered/test_samples/pods/003-008-disallowed-initcontainer-disallowed-capability.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-initcontainer-disallowed-capability
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            capabilities:
                drop:
                    - ALL
    initContainers:
        - command:
            - /bin/sh
            - -c
            - echo init
          image: busybox
          name: init
          securityContext:
            capabilities:
                add:
                    - NET_ADMIN
                drop:
                    - ALL
