modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-capabilities/rendered/test_samples/pods/005-009-disallowed-multiple-containers-one-disallowed.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-multiple-containers-one-disallowed
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            capabilities:
                add:
                    - NET_ADMIN
                drop:
                    - ALL
        - command:
            - /bin/sh
            - -c
            - sleep 3600
          image: busybox
          name: sidecar
          securityContext:
            capabilities:
                drop:
                    - ALL
