modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-capabilities/rendered/test_samples/pods/008-019-disallowed-no-drop-capabilities.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

apiVersion: v1
kind: Pod
metadata:
    name: disallowed-no-drop-capabilities
    namespace: testns
spec:
    containers:
        - image: nginx
          name: nginx
          securityContext:
            capabilities:
                add:
                    - NET_ADMIN
