modules/015-admission-policy-engine/charts/constraint-templates/tests/test_cases/constraints/security/allowed-capabilities/rendered/test_suite.yaml
# Code generated by constraint_testgen; DO NOT EDIT.

kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: d8-allowed-capabilities
tests:
  - name: pss-baseline
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 012-allowed-no-add-capabilities
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/001-012-allowed-no-add-capabilities.yaml
        assertions:
          - violations: "no"
      - name: 013-allowed-net-bind-service
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/002-013-allowed-net-bind-service.yaml
        assertions:
          - violations: "no"
      - name: 008-disallowed-initcontainer-disallowed-capability
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/003-008-disallowed-initcontainer-disallowed-capability.yaml
        assertions:
          - violations: "yes"
      - name: 021-disallowed-ephemeralcontainer-disallowed-capability
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/004-021-disallowed-ephemeralcontainer-disallowed-capability.yaml
        assertions:
          - violations: "yes"
      - name: 009-disallowed-multiple-containers-one-disallowed
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/005-009-disallowed-multiple-containers-one-disallowed.yaml
        assertions:
          - violations: "yes"
      - name: 010-disallowed-net-admin
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/006-010-disallowed-net-admin.yaml
        assertions:
          - violations: "yes"
      - name: 011-disallowed-sys-admin
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/007-011-disallowed-sys-admin.yaml
        assertions:
          - violations: "yes"
  - name: pss-restricted
    template: constraint-template.yaml
    constraint: ../constraints/pss_restricted.yaml
    cases:
      - name: 019-disallowed-no-drop-capabilities
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/008-019-disallowed-no-drop-capabilities.yaml
        assertions:
          - violations: "yes"
      - name: 020-disallowed-not-dropping-all
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/009-020-disallowed-not-dropping-all.yaml
        assertions:
          - violations: "yes"
      - name: 018-disallowed-disallowed-capability
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/010-018-disallowed-disallowed-capability.yaml
        assertions:
          - violations: "yes"
  - name: pss-baseline-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 024-030-disallowed-by-exception-capability-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-024-030-disallowed-by-exception-capability-mismatch-inv-1.yaml
        object: test_samples/pods/011-024-030-disallowed-by-exception-capability-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 033-disallowed-no-exception-label
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/012-033-disallowed-no-exception-label.yaml
        assertions:
          - violations: "yes"
      - name: 024-032-disallowed-by-exception-multiple-containers-one-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-024-030-disallowed-by-exception-capability-mismatch-inv-1.yaml
        object: test_samples/pods/013-024-032-disallowed-by-exception-multiple-containers-one-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 024-037-allowed-by-exception-net-admin
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/001-024-030-disallowed-by-exception-capability-mismatch-inv-1.yaml
        object: test_samples/pods/014-024-037-allowed-by-exception-net-admin.yaml
        assertions:
          - violations: "no"
  - name: pss-baseline-spe-container
    template: constraint-template.yaml
    constraint: ../constraints/pss_baseline.yaml
    cases:
      - name: 036-037-allowed-by-container-exception-net-admin
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-036-037-allowed-by-container-exception-net-admin-inv-1.yaml
        object: test_samples/pods/015-036-037-allowed-by-container-exception-net-admin.yaml
        assertions:
          - violations: "no"
      - name: 036-038-allowed-by-container-exception-nginx-only
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/004-036-037-allowed-by-container-exception-net-admin-inv-1.yaml
        object: test_samples/pods/016-036-038-allowed-by-container-exception-nginx-only.yaml
        assertions:
          - violations: "no"
      - name: 037-040-allowed-by-container-exception-drop-all
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/006-037-040-allowed-by-container-exception-drop-all-inv-1.yaml
        object: test_samples/pods/017-037-040-allowed-by-container-exception-drop-all.yaml
        assertions:
          - violations: "no"
  - name: pss-restricted-with-exception
    template: constraint-template.yaml
    constraint: ../constraints/pss_restricted.yaml
    cases:
      - name: 023-031-disallowed-by-exception-drop-mismatch
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-023-031-disallowed-by-exception-drop-mismatch-inv-1.yaml
        object: test_samples/pods/018-023-031-disallowed-by-exception-drop-mismatch.yaml
        assertions:
          - violations: "yes"
      - name: 034-disallowed-by-add
        inventory:
          - ../../../_test-samples/ns.yaml
        object: test_samples/pods/019-034-disallowed-by-add.yaml
        assertions:
          - violations: "yes"
      - name: 025-035-disallowed-by-exception-empty-spec
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/008-025-035-disallowed-by-exception-empty-spec-inv-1.yaml
        object: test_samples/pods/020-025-035-disallowed-by-exception-empty-spec.yaml
        assertions:
          - violations: "yes"
      - name: 023-039-allowed-by-exception-drop-all
        inventory:
          - ../../../_test-samples/ns.yaml
          - test_samples/spe/007-023-031-disallowed-by-exception-drop-mismatch-inv-1.yaml
        object: test_samples/pods/021-023-039-allowed-by-exception-drop-all.yaml
        assertions:
          - violations: "no"
